--- a/style.css
+++ b/style.css
@@ -60,3 +60,36 @@ a.CodeT {           /* CodeTのicon */
   background-color: rgb(14, 189, 212);
   color: blue;
   }
+
+  footer{
+    background-color: rgb(137, 185, 183);
+  }
+  footer a{
+    text-align: center;
+    background-color: rgb(188, 224, 152);
+  }
+
+header{
+  height: auto;
+  text-align: center;
+  background-color: rgb(137, 185, 183);
+}
+.Progatebtn{               /* this page all btn */
+  padding: 8px 24px;
+  color: rgb(0, 116, 39);
+  display: block;
+  opacity: 1;
+  border-radius:4px;
+  background-color: rgb(14, 212, 113);
+  margin: 0 660px;
+  margin-top: 15px;
+}
+a.Progatebtn{
+  text-decoration: none;
+}
+.Progatebtn:hover{         /* カーソルを乗せた際の色の変更 */
+  background-color: rgb(0, 116, 39);
+  color:rgb(14, 212, 113);
+  opacity: 1;
+  transition: 1s;
+}
