--- a/style.css
+++ b/style.css
@@ -63,6 +63,7 @@ a.CodeT {           /* CodeTのicon */
 
   footer{
     background-color: rgb(137, 185, 183);
+    padding-bottom: 30px;
   }
   footer a{
     text-align: center;
@@ -81,7 +82,7 @@ header{
   opacity: 1;
   border-radius:4px;
   background-color: rgb(14, 212, 113);
-  margin: 0 660px;
+  margin: 0 670px;
   margin-top: 15px;
 }
 a.Progatebtn{
@@ -92,4 +93,40 @@ a.Progatebtn{
   color:rgb(14, 212, 113);
   opacity: 1;
   transition: 1s;
+}
+
+.Udemybtn{               /* this page all btn */
+  padding: 8px 24px;
+  color: rgb(0, 116, 39);
+  display: block;
+  opacity: 1;
+  border-radius:4px;
+  background-color: rgb(14, 212, 113);
+  margin: 0 670px;
+  margin-top: 15px;
+}
+a.Udemybtn{
+  text-decoration: none;
+}
+.Udemybtn:hover{         /* カーソルを乗せた際の色の変更 */
+  background-color: rgb(0, 116, 39);
+  color:rgb(14, 212, 113);
+  opacity: 1;
+  transition: 1s;
+}
+
+
+.flex-list{
+  display: flex;
+flex-wrap: wrap;
+}
+.flex-list li{
+  flex:auto;
+  width:50%
+}
+li{
+  list-style: none;
+}
+footer h4{
+  text-align: center;
 }
